#ifndef PAYMENT_METHOD_ENUM_HPP
#define PAYMENT_METHOD_ENUM_HPP

namespace places {

enum PaymentMethodEnum {
    CREDIT_CARD,
    BOLETO,
};

} // namespace places

#endif
