#ifndef PAYMENT_STATUS_ENUM_HPP
#define PAYMENT_STATUS_ENUM_HPP

namespace places {

enum PaymentStatusEnum {
    CANCELED,
    IN_PROGRESS,
    SUCCESS,
};

} // namespace places

#endif
